[gd_scene load_steps=36 format=3 uid="uid://c6tc8aknet22k"]

[ext_resource type="Script" uid="uid://deuepitqe40pt" path="res://Scripts/Telas.gd" id="1_j5yw3"]
[ext_resource type="Texture2D" uid="uid://b7bmfhk8fkjni" path="res://Images/Descricao de Personagem/Personagem Select.png" id="2_dahhg"]
[ext_resource type="Texture2D" uid="uid://8tameeleqm8l" path="res://Images/Icones/setinha.png" id="2_kldst"]
[ext_resource type="Texture2D" uid="uid://3pwf8ifjb7cx" path="res://Images/Descricao de Personagem/Personagem Redondinho.png" id="3_3so38"]
[ext_resource type="Texture2D" uid="uid://ddn2qgy1ik2hq" path="res://Images/Descricao de Personagem/Personagem brigao.png" id="4_3cx6b"]
[ext_resource type="Texture2D" uid="uid://bdxf7x8pec3e5" path="res://Images/Descricao de Personagem/Personagem Louco.png" id="5_wxwew"]
[ext_resource type="Texture2D" uid="uid://cd0hqj1h21rq4" path="res://Images/Descricao de Personagem/Personagem patrulheiro.png" id="6_acvyw"]
[ext_resource type="Texture2D" uid="uid://7fstmq5y3jc6" path="res://Images/Descricao de Personagem/Personagem Mago.png" id="7_alh3a"]
[ext_resource type="Texture2D" uid="uid://c8fdc5d1j48he" path="res://Images/Descricao de Personagem/Personagem Robusto.png" id="8_4q8tf"]
[ext_resource type="Texture2D" uid="uid://dhuc4oo480q8q" path="res://Images/Descricao de Personagem/Personagem idoso.png" id="9_x3xnh"]
[ext_resource type="Texture2D" uid="uid://dgwa1qqyin1og" path="res://Images/Descricao de Personagem/Personagem Sortudo.png" id="10_8r6kd"]
[ext_resource type="Texture2D" uid="uid://dp47quye14o7e" path="res://Images/Descricao de Personagem/personagem Mutante .png" id="11_tfod6"]
[ext_resource type="Texture2D" uid="uid://dp3e4glctw2jp" path="res://Images/Seletor de Personagem/Redondinho.png" id="12_3so38"]
[ext_resource type="Texture2D" uid="uid://d0ao0eq8hpu8a" path="res://Images/Seletor de Personagem/interrogacao.png" id="12_rajel"]
[ext_resource type="Texture2D" uid="uid://ka6gf45k5ukw" path="res://Images/Seletor de Personagem/Brigao.png" id="14_vvhu1"]
[ext_resource type="Texture2D" uid="uid://yfcxqq32iv8" path="res://Images/Seletor de Personagem/Louco.png" id="15_lbihj"]
[ext_resource type="Texture2D" uid="uid://bb6t44b4c7lkd" path="res://Images/Seletor de Personagem/Patrulheiro.png" id="16_raj38"]
[ext_resource type="Texture2D" uid="uid://cbjhm1ygbproi" path="res://Images/Seletor de Personagem/Mago.png" id="17_8e0uq"]
[ext_resource type="Texture2D" uid="uid://bvwg47wcmf7he" path="res://Images/Seletor de Personagem/Robusto.png" id="18_i0vto"]
[ext_resource type="Texture2D" uid="uid://dfhutqy4a6byx" path="res://Images/Seletor de Personagem/Idoso.png" id="19_3jf1l"]
[ext_resource type="Texture2D" uid="uid://d3yktfngn0t5g" path="res://Images/Seletor de Personagem/Sortudo.png" id="20_356ba"]
[ext_resource type="Texture2D" uid="uid://dnffgbnu47i6g" path="res://Images/Seletor de Personagem/Mutante.png" id="21_i4lct"]
[ext_resource type="Texture2D" uid="uid://m71mv214ha8k" path="res://Images/Design Botoes/retangulo Cinza 3.png" id="22_lbihj"]
[ext_resource type="PackedScene" uid="uid://dcaq0siquimoh" path="res://Scenes/Music Controller.tscn" id="24_raj38"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yia4p"]
bg_color = Color(0.238744, 0.238744, 0.238744, 0.862745)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rajel"]
texture = ExtResource("2_dahhg")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vvhu1"]
texture = ExtResource("3_3so38")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lbihj"]
texture = ExtResource("4_3cx6b")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_raj38"]
texture = ExtResource("5_wxwew")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8e0uq"]
texture = ExtResource("6_acvyw")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_i0vto"]
texture = ExtResource("7_alh3a")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3jf1l"]
texture = ExtResource("8_4q8tf")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_356ba"]
texture = ExtResource("9_x3xnh")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_i4lct"]
texture = ExtResource("10_8r6kd")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_iyesh"]
texture = ExtResource("11_tfod6")

[node name="Selecao de Personagem" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Telas" type="CanvasLayer" parent="."]
script = ExtResource("1_j5yw3")

[node name="Fundo" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_yia4p")
metadata/_edit_lock_ = true

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 31.0
offset_top = 514.0
offset_right = -377.0
offset_bottom = -15.0
horizontal_scroll_mode = 2
vertical_scroll_mode = 0
scroll_deadzone = 1
metadata/_edit_group_ = true

[node name="Personagens na Horizontal" type="HBoxContainer" parent="ScrollContainer"]
custom_minimum_size = Vector2(980, 80)
layout_mode = 2
theme_override_constants/separation = 12

[node name="BInfo" type="Button" parent="ScrollContainer/Personagens na Horizontal" groups=["Click"]]
layout_mode = 2
icon = ExtResource("12_rajel")
flat = true

[node name="BRedondinho" type="Button" parent="ScrollContainer/Personagens na Horizontal" groups=["Click"]]
layout_mode = 2
icon = ExtResource("12_3so38")
flat = true

[node name="BBrigao" type="Button" parent="ScrollContainer/Personagens na Horizontal" groups=["Click"]]
layout_mode = 2
icon = ExtResource("14_vvhu1")
flat = true

[node name="BLouco" type="Button" parent="ScrollContainer/Personagens na Horizontal" groups=["Click"]]
layout_mode = 2
icon = ExtResource("15_lbihj")
flat = true

[node name="BPatrulheiro" type="Button" parent="ScrollContainer/Personagens na Horizontal" groups=["Click"]]
layout_mode = 2
icon = ExtResource("16_raj38")
flat = true

[node name="BMago" type="Button" parent="ScrollContainer/Personagens na Horizontal" groups=["Click"]]
layout_mode = 2
icon = ExtResource("17_8e0uq")
flat = true

[node name="BRobusto" type="Button" parent="ScrollContainer/Personagens na Horizontal" groups=["Click"]]
layout_mode = 2
icon = ExtResource("18_i0vto")
flat = true

[node name="BIdoso" type="Button" parent="ScrollContainer/Personagens na Horizontal" groups=["Click"]]
layout_mode = 2
icon = ExtResource("19_3jf1l")
flat = true

[node name="BSortudo" type="Button" parent="ScrollContainer/Personagens na Horizontal" groups=["Click"]]
layout_mode = 2
icon = ExtResource("20_356ba")
flat = true

[node name="BMutante" type="Button" parent="ScrollContainer/Personagens na Horizontal" groups=["Click"]]
layout_mode = 2
icon = ExtResource("21_i4lct")
flat = true

[node name="Personagens Descricao" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 82.0
offset_top = 89.0
offset_right = 402.0
offset_bottom = 474.0
metadata/_edit_group_ = true

[node name="Select Personagem" type="Panel" parent="Personagens Descricao"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_rajel")

[node name="Redondinho" type="Panel" parent="Personagens Descricao"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_vvhu1")

[node name="Brigao" type="Panel" parent="Personagens Descricao"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_lbihj")

[node name="Louco" type="Panel" parent="Personagens Descricao"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_raj38")

[node name="Patrulheiro" type="Panel" parent="Personagens Descricao"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_8e0uq")

[node name="Mago" type="Panel" parent="Personagens Descricao"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_i0vto")

[node name="Robusto" type="Panel" parent="Personagens Descricao"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_3jf1l")

[node name="Idoso" type="Panel" parent="Personagens Descricao"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_356ba")

[node name="Sortudo" type="Panel" parent="Personagens Descricao"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_i4lct")

[node name="Mutante" type="Panel" parent="Personagens Descricao"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_iyesh")

[node name="Proximo" type="Button" parent="." groups=["Click"]]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.741319
anchor_top = 0.817901
anchor_right = 1.00347
anchor_bottom = 1.00617
offset_left = -37.0
offset_top = -12.0
offset_right = -37.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Proximo"
icon = ExtResource("22_lbihj")
flat = true
icon_alignment = 1
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="Voltar Selecao Personagem" type="Button" parent="." groups=["Click"]]
layout_mode = 0
offset_left = 15.0
offset_top = 17.0
offset_right = 291.0
offset_bottom = 74.0
theme_override_font_sizes/font_size = 20
text = "Selecao de Personagem"
icon = ExtResource("2_kldst")
flat = true
alignment = 2
expand_icon = true

[node name="Line" type="Panel" parent="."]
modulate = Color(0.521141, 0.521141, 0.521141, 1)
layout_mode = 0
offset_left = -23.0
offset_top = 488.0
offset_right = 1172.0
offset_bottom = 499.0

[node name="Mensagem" type="Button" parent="."]
layout_mode = 0
offset_left = 681.0
offset_top = 63.0
offset_right = 1066.0
offset_bottom = 429.0
theme_override_font_sizes/font_size = 50
text = "Na real 
tu nao 
escolhe nada "
flat = true

[node name="Music Controller" parent="." instance=ExtResource("24_raj38")]

[connection signal="focus_entered" from="ScrollContainer/Personagens na Horizontal/BInfo" to="Telas" method="_on_b_info_focus_entered"]
[connection signal="focus_exited" from="ScrollContainer/Personagens na Horizontal/BInfo" to="Telas" method="_on_b_info_focus_exited"]
[connection signal="focus_entered" from="ScrollContainer/Personagens na Horizontal/BRedondinho" to="Telas" method="_on_b_redondinho_focus_entered"]
[connection signal="focus_exited" from="ScrollContainer/Personagens na Horizontal/BRedondinho" to="Telas" method="_on_b_redondinho_focus_exited"]
[connection signal="focus_entered" from="ScrollContainer/Personagens na Horizontal/BBrigao" to="Telas" method="_on_b_brigao_focus_entered"]
[connection signal="focus_exited" from="ScrollContainer/Personagens na Horizontal/BBrigao" to="Telas" method="_on_b_brigao_focus_exited"]
[connection signal="focus_entered" from="ScrollContainer/Personagens na Horizontal/BLouco" to="Telas" method="_on_b_louco_focus_entered"]
[connection signal="focus_exited" from="ScrollContainer/Personagens na Horizontal/BLouco" to="Telas" method="_on_b_louco_focus_exited"]
[connection signal="focus_entered" from="ScrollContainer/Personagens na Horizontal/BPatrulheiro" to="Telas" method="_on_b_patrulheiro_focus_entered"]
[connection signal="focus_exited" from="ScrollContainer/Personagens na Horizontal/BPatrulheiro" to="Telas" method="_on_b_patrulheiro_focus_exited"]
[connection signal="focus_entered" from="ScrollContainer/Personagens na Horizontal/BMago" to="Telas" method="_on_b_mago_focus_entered"]
[connection signal="focus_exited" from="ScrollContainer/Personagens na Horizontal/BMago" to="Telas" method="_on_b_mago_focus_exited"]
[connection signal="focus_entered" from="ScrollContainer/Personagens na Horizontal/BRobusto" to="Telas" method="_on_b_robusto_focus_entered"]
[connection signal="focus_exited" from="ScrollContainer/Personagens na Horizontal/BRobusto" to="Telas" method="_on_b_robusto_focus_exited"]
[connection signal="focus_entered" from="ScrollContainer/Personagens na Horizontal/BIdoso" to="Telas" method="_on_b_idoso_focus_entered"]
[connection signal="focus_exited" from="ScrollContainer/Personagens na Horizontal/BIdoso" to="Telas" method="_on_b_idoso_focus_exited"]
[connection signal="focus_entered" from="ScrollContainer/Personagens na Horizontal/BSortudo" to="Telas" method="_on_b_sortudo_focus_entered"]
[connection signal="focus_exited" from="ScrollContainer/Personagens na Horizontal/BSortudo" to="Telas" method="_on_b_sortudo_focus_exited"]
[connection signal="focus_entered" from="ScrollContainer/Personagens na Horizontal/BMutante" to="Telas" method="_on_b_mutante_focus_entered"]
[connection signal="focus_exited" from="ScrollContainer/Personagens na Horizontal/BMutante" to="Telas" method="_on_b_mutante_focus_exited"]
[connection signal="pressed" from="Proximo" to="Telas" method="_on_proximo_pressed"]
[connection signal="pressed" from="Voltar Selecao Personagem" to="Telas" method="_on_voltar_selecao_personagem_pressed"]
